# form-check

./: .gitignore  FORMCHECK.md  README.md  ca.config  code_assistant.md  main.js  package-lock.json  package.json  preload.js  requirements.md  requirements_v2.md  requirements_v3.md  requirements_v4.md  start.sh
.claude/: launch.json
backend/: analyzer.py  calibrator.py  camera.py  formcheck.modelfile  journal.py  logger.py  pyproject.toml  reanalyzer.py  recorder.py  reporter.py  server.py  sound.py  voice.py  wakelock.py  watchbridge.py
renderer/: app.js  index.html  serve.sh  style.css
