[project]
name = "formcheck-backend"
version = "1.0.0"
description = "FormCheck Python backend — WebSocket server + CV pipeline"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "opencv-python>=4.9.0",
    "mediapipe>=0.10.0",
    "numpy>=1.26.0",
    "ollama>=0.4.0",
    "pygame>=2.5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
